completely fix x overflow

--- a/styles.css
+++ b/styles.css
@@ -71,33 +71,23 @@
   }
 
 
-body {
-line-height: 1.5;
--webkit-font-smoothing: antialiased;
-}
-
 a {
     text-decoration: none;
     color: black;
 }
 
-* {
-    outline: 1px solid rgba(255, 0, 0, 0.2); /* Временно помогает увидеть границы всех элементов */
-}
 body {
     display: flex;
     flex-direction: column;
     font-size: 14px;
-    overflow-x: hidden;
 
     align-items: center;
     font-family: 'Roboto';
-    /* max-width: 110vw; */
-    
+    max-width: 100vw;
 }
 
 .header {
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -242,7 +232,7 @@ body {
 
 .footer{
     display: flex;
-    width: 100vw;
+    width: 100%;
 
     justify-content: center;
     background-color: rgb(47, 146, 179);
